<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:background="?android:attr/windowBackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
    android:textColor="?android:attr/textColorPrimary"
            android:text="@string/TXTVIEW_START_TIME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>
        <TimePicker
            android:id="@+id/startTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <TextView
    android:textColor="?android:attr/textColorPrimary"
            android:text="@string/TXTVIEW_END_TIME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
        <TimePicker
            android:id="@+id/endTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <TextView
    android:textColor="?android:attr/textColorPrimary"
            android:text="@string/TXTVIEW_REPEAT_ON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:alignmentMode="alignMargins"
            android:rowCount="2"
            android:rowOrderPreserved="false">

            <ToggleButton android:id="@+id/toggleSun" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/TGL_SUN" android:textOff="@string/TGL_SUN" />
            <ToggleButton android:id="@+id/toggleMon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/TGL_MON" android:textOff="@string/TGL_MON" />
            <ToggleButton android:id="@+id/toggleTue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/TGL_TUE" android:textOff="@string/TGL_TUE" />
            <ToggleButton android:id="@+id/toggleWed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/TGL_WED" android:textOff="@string/TGL_WED" />
            <ToggleButton android:id="@+id/toggleThu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/TGL_THU" android:textOff="@string/TGL_THU" />
            <ToggleButton android:id="@+id/toggleFri" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/TGL_FRI" android:textOff="@string/TGL_FRI" />
            <ToggleButton android:id="@+id/toggleSat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/TGL_SAT" android:textOff="@string/TGL_SAT" />
        </GridLayout>

        <Button
            android:id="@+id/saveScheduleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/BTN_SAVE_SCH"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>

